--- a/src/main/resources/templates/job-detail.html
+++ b/src/main/resources/templates/job-detail.html
@@ -10,6 +10,35 @@
 
     <!-- // TODO #2 - display the job fields, one per row -->
 
+    <div th:unless="${job!=null}">
+        <h2>No Result</h2>
+    </div>
+
+    <div th:if="${job!=null}">
+        <table  th:fragment="single-job" class="job-listing">
+            <tr>
+                <th>Name</th>
+                <td th:text="${job.name}"></td>
+            </tr>
+            <tr>
+                <th>Employer</th>
+                <td th:text="${job.employer}"></td>
+            </tr>
+            <tr>
+                <th>Location</th>
+                <td th:text="${job.location}"></td>
+            </tr>
+            <tr>
+                <th>Position Type</th>
+                <td th:text="${job.positionType}"></td>
+            </tr>
+            <tr>
+                <th>Skill</th>
+                <td th:text="${job.coreCompetency}"></td>
+            </tr>
+        </table>
+    </div>
+
 </div>
 
 </body>
